--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0 minimum-scale=1"
     />
 
-    <title>AQ Portfolio</title>
+    <title>RS Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
